# rust-practical-course

./: README.md
fm/: Cargo.toml
fm/assets/cover/: README.md
fm/src/: args.rs  main.rs
fm/src/utils/: file_help.rs  mod.rs
network-monitor/: .env  Cargo.toml  moniter_log.csv  monitor_list.json
network-monitor/db/: monitor.db
network-monitor/migrations/2025-11-17-051840-0000_create_monitor_tables/: down.sql  up.sql
network-monitor/src/: async_monitor.rs  main.rs  tools_types.rs
network-monitor/src/alerts/: mod.rs
network-monitor/src/api/: mod.rs  routes.rs
network-monitor/src/api/handlers/: alert_log_handlers.rs  alert_rule_handlers.rs  check_result_handlers.rs  mod.rs  monitor_handlers.rs
network-monitor/src/database/: connect_db.rs  mod.rs  models.rs  schema.rs
network-monitor/src/database/repositories/: alert_logs_repo.rs  alert_rules_repo.rs  check_result_repo.rs  mod.rs  monitor_repo.rs  notification_channels_repo.rs
network-monitor/src/database/services/: alert_logs_service.rs  alert_rules_service.rs  check_result_service.rs  mod.rs  monitor_service.rs  notification_channels_service.rs
network-monitor/src/monitor/: cpu_monitor.rs  disk_monitor.rs  dns_monitor.rs  ftp_monitor.rs  http_monitor.rs  icmp_monitor.rs  memory_monitor.rs  mod.rs  monitor_trait.rs  process_monitor.rs  tcp_monitor.rs  traceroute_monitor.rs  types.rs  udp_monitor.rs  unknown_monitor.rs
network-monitor/src/tools/: file_tool.rs  http_tool.rs  mod.rs  retry_tool.rs
