[package]
name = "network-monitor"
version = "0.1.0"
edition = "2024"

[dependencies]
# HTTP请求库
reqwest = { version = "0.12.24", features = ["json", "blocking"]}
# 异步运行时
tokio = { version = "1.28.2", features = ["full"] }

# 用于命令行参数解析
clap = { version = "4.4.7", features = ["derive"] }
# CSV 文件处理
csv = "1.3.6"
# 用于生成唯一ID
uuid = { version = "1.1.0", features = ["v4"] }

# json处理
serde_json = "1.0.82"
serde = { version = "1.0.133", features = ["derive"] }

# 动态分发 trait
async-trait = "0.1.68"
trust-dns-resolver = { version = "0.23", features = ["tokio-runtime"] }
tokio-native-tls = "0.3"
native-tls = "0.2"
# 用于处理时间和日期
chrono = { version = "0.4", features = ["clock","serde"] }
x509-parser = { version = "0.18" }
# 正则表达式
regex = "1.5.5"
# 数据库操作
diesel = { version = "2.3.3", features = ["chrono", "serde_json", "sqlite", "r2d2"] }
diesel_migrations = "2.3.0"
# api 路由
actix-web = { version = "4.4.0" }
actix-service = "^2.0.2"
futures-util = "0.3.28"
# 重试库
backon = "1.6.0"
log = "0.4"
env_logger = "0.10"

